# ping

./: .gitignore  CMakeLists.txt  Makefile  README.md  id_rsa.pub  repo.txt
.cache/clangd/index/: cli.c.9D554B8DDE851E64.idx  list.c.CF9AB2C2E7BFEBD2.idx  main.c.F22824CF0E173F8C.idx  ping.h.D8E9DB78C627F209.idx
include/: ping.h
src/: args.c  cli.c  config.c  list.c  main.c  ping.h  print.c  socket.c
